<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TodActivity">

    <TextView
        android:id="@+id/textView4"
        android:layout_width="411dp"
        android:layout_height="59dp"
        android:background="#DCDCDD"
        android:fontFamily="sans-serif-black"
        android:gravity="center|center_horizontal"
        android:text="@string/title_top_of_descent"
        android:textColor="#1985A1"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/input_distance"
        android:layout_width="140dp"
        android:layout_height="40dp"
        android:layout_marginStart="44dp"
        android:layout_marginTop="24dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/input_hint_altitude_start"
        android:inputType="number"
        android:textColor="@color/txt_color_light"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/InputTrueSpeed" />

    <TextView
        android:id="@+id/str_result"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="10dp"
        android:textColor="#009688"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.107"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_time_to_go" />

    <Button
        android:id="@+id/btn_time_to_go"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/btnValidate"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.137"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/input_wind_force" />

    <EditText
        android:id="@+id/input_wind_force"
        android:layout_width="140dp"
        android:layout_height="40dp"
        android:layout_marginStart="44dp"
        android:layout_marginTop="24dp"
        android:ems="10"
        android:hint="@string/input_hint_altitude_finish"
        android:inputType="number"
        android:textColor="@color/txt_color_light"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/input_distance"
        android:importantForAutofill="no" />

    <EditText
        android:id="@+id/txt_rate"
        android:layout_width="60dp"
        android:layout_height="40dp"
        android:layout_marginTop="4dp"
        android:ems="10"
        android:inputType="number"
        android:text="@string/tod_input_rate_descent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.251"
        app:layout_constraintStart_toEndOf="@+id/InputTrueSpeed"
        app:layout_constraintTop_toBottomOf="@+id/textView7"
        tools:ignore="LabelFor"
        android:autofillHints="" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:text="@string/input_hint_rate_of_descent"
        android:textColor="@color/txt_color_light"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.328"
        app:layout_constraintStart_toEndOf="@+id/InputTrueSpeed"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <EditText
        android:id="@+id/InputTrueSpeed"
        android:layout_width="140dp"
        android:layout_height="40dp"
        android:layout_marginStart="44dp"
        android:layout_marginTop="56dp"
        android:ems="10"
        android:hint="@string/input_hint_ground_speed"
        android:inputType="number"
        android:textColor="@color/txt_color_light"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4"
        android:importantForAutofill="no" />

    <ImageButton
        android:id="@+id/btn_menu"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="8dp"
        android:background="#00FFFFFF"
        android:onClick="onClickBtnMenu"
        android:scaleType="fitXY"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/menu"
        android:contentDescription="@string/description_menu" />

</androidx.constraintlayout.widget.ConstraintLayout>