<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SlopeActivity">

    <TextView
        android:id="@+id/textView4"
        android:layout_width="411dp"
        android:layout_height="59dp"
        android:background="#DCDCDD"
        android:fontFamily="sans-serif-black"
        android:text="@string/title_slope"
        android:gravity="center|center_horizontal"
        android:textColor="#1985A1"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/InputRunwayMaxElevation"
        android:layout_width="220dp"
        android:layout_height="40dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="50dp"
        android:ems="10"
        android:hint="@string/input_hint_runway_height_max"
        android:importantForAutofill="no"
        android:inputType="number"
        android:textColor="@color/txt_color_light"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <EditText
        android:id="@+id/InputRunwayMinElevation"
        android:layout_width="220dp"
        android:layout_height="40dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="30dp"
        android:ems="10"
        android:hint="@string/input_hint_runway_height_min"
        android:importantForAutofill="no"
        android:inputType="number"
        android:textColor="@color/txt_color_light"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/InputRunwayMaxElevation" />


    <EditText
        android:id="@+id/InputRunwayLenght"
        android:layout_width="220dp"
        android:layout_height="40dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="30dp"
        android:ems="10"
        android:hint="@string/input_hint_runway_lenght"
        android:importantForAutofill="no"
        android:inputType="number"
        android:textColor="@color/txt_color_light"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/InputRunwayMinElevation" />


    <Button
        android:id="@+id/btn_slope"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/btnValidate"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.129"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/InputRunwayLenght" />


    <TextView
        android:id="@+id/str_result"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="80dp"
        android:layout_marginEnd="10dp"
        android:textColor="#009688"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_slope" />

    <ImageButton
        android:id="@+id/btn_menu"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="8dp"
        android:background="#00FFFFFF"
        android:contentDescription="@string/title_menu"
        android:onClick="onClickBtnMenu"
        android:scaleType="fitXY"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/menu" />

</androidx.constraintlayout.widget.ConstraintLayout>